Created FauxController, maven Testing and NotImplementedException